adaptacion de imagenes de lose, index y winner a formato responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <div class="container text-center">
                 <h2>MasterMind</h2>
-                <img src="./img/brain.gif" alt="">
+                <img class="img-fluid" src="./img/brain.gif" alt="">
                 <div>
                     <a href="./views/savename.html"><button type="button" class="btn btn-primary">Start</button></a>
                     <a href="./views/help.html"><button type="button" class="btn btn-secondary">Help</button></a>
